[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/game/PauseState.gd" type="Script" id=1]
[ext_resource path="res://scenes/shared/game/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/music/breakfast.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/fonts/VCR_20.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Alpha_In"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Alpha_Out"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="PauseState" type="CanvasLayer"]
pause_mode = 2
layer = 99
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 0.501961 )
polygon = PoolVector2Array( 0, 0, 1280, 0, 1280, 720, 0, 720 )

[node name="Pause_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Music_Tween" type="Tween" parent="."]

[node name="PauseMenu" parent="." instance=ExtResource( 2 )]
options = [ "Resume", "Restart Song", "Options", "Quit" ]

[node name="Options_Notice" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 322.0
margin_top = 692.0
margin_right = 958.0
margin_bottom = 710.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "Note: some options require the level to be restarted."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Options_Notice"]
anims/Alpha_In = SubResource( 1 )
anims/Alpha_Out = SubResource( 2 )
anims/RESET = SubResource( 3 )
